--- a/docs/tut_fsq.ipynb
+++ b/docs/tut_fsq.ipynb
@@ -42,7 +42,7 @@
    },
    "outputs": [],
    "source": [
-    "import duckboat as dw"
+    "import duckboat as uck"
    ]
   },
   {
@@ -80,7 +80,7 @@
    "source": [
     "# NOTE: You can comment out the following two lines once\n",
     "# you have the data saved locally to avoid downloading it again\n",
-    "t = dw.Table('s3://us-west-2.opendata.source.coop/fused/fsq-os-places/2024-12-03/places/10.parquet').hide()\n",
+    "t = uck.Table('s3://us-west-2.opendata.source.coop/fused/fsq-os-places/2024-12-03/places/10.parquet').hide()\n",
     "t.save('data/fsq_places_10.parquet')"
    ]
   },
@@ -107,7 +107,7 @@
    },
    "outputs": [],
    "source": [
-    "t = dw.Table('data/fsq_places_10.parquet')"
+    "t = uck.Table('data/fsq_places_10.parquet')"
    ]
   },
   {
@@ -323,7 +323,7 @@
    },
    "outputs": [],
    "source": [
-    "t = dw.Table('s3://us-west-2.opendata.source.coop/fused/fsq-os-places/2024-12-03/places/*.parquet').hide()"
+    "t = uck.Table('s3://us-west-2.opendata.source.coop/fused/fsq-os-places/2024-12-03/places/*.parquet').hide()"
    ]
   },
   {
