--- a/docs/tut_lazy.ipynb
+++ b/docs/tut_lazy.ipynb
@@ -40,7 +40,7 @@
    },
    "outputs": [],
    "source": [
-    "import duckboat as dw"
+    "import duckboat as uck"
    ]
   },
   {
@@ -85,7 +85,7 @@
     }
    ],
    "source": [
-    "t0 = dw.Table('data/yellow_tripdata_2010-01.parquet')\n",
+    "t0 = uck.Table('data/yellow_tripdata_2010-01.parquet')\n",
     "t0.columns"
    ]
   },
