--- a/notebooks/Untitled-1.ipynb
+++ b/notebooks/Untitled-1.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import duckboat as dw\n",
+    "import duckboat as uck\n",
     "import pandas as pd\n",
     "from pathlib import Path"
    ]
@@ -28,7 +28,7 @@
     }
    ],
    "source": [
-    "t = dw.Table(pd.DataFrame({'a': [0]}))\n",
+    "t = uck.Table(pd.DataFrame({'a': [0]}))\n",
     "\n",
     "f = 'select a + 1 as a'\n",
     "\n",
@@ -43,7 +43,7 @@
    "source": [
     "df = pd.DataFrame({'a': [0]})\n",
     "\n",
-    "tbl = dw.Table(df)"
+    "tbl = uck.Table(df)"
    ]
   },
   {
