--- a/notebooks/penguin.ipynb
+++ b/notebooks/penguin.ipynb
@@ -46,10 +46,10 @@
     }
    ],
    "source": [
-    "import duckboat as dw\n",
+    "import duckboat as uck\n",
     "\n",
-    "# t = dw.Table('https://raw.githubusercontent.com/allisonhorst/palmerpenguins/main/inst/extdata/penguins.csv').hide()\n",
-    "t = dw.Table('data/penguins.csv')\n",
+    "# t = uck.Table('https://raw.githubusercontent.com/allisonhorst/palmerpenguins/main/inst/extdata/penguins.csv').hide()\n",
+    "t = uck.Table('data/penguins.csv')\n",
     "t"
    ]
   },
@@ -79,11 +79,11 @@
     }
    ],
    "source": [
-    "import duckboat as dw\n",
+    "import duckboat as uck\n",
     "\n",
     "csv = 'https://raw.githubusercontent.com/allisonhorst/palmerpenguins/main/inst/extdata/penguins.csv'\n",
     "\n",
-    "dw.Table(csv).do(\n",
+    "uck.Table(csv).do(\n",
     "    \"where sex = 'female' \",\n",
     "    'where year > 2008',\n",
     "    'select *, cast(body_mass_g as double) as grams',\n",
