--- a/notebooks/test.ipynb
+++ b/notebooks/test.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import duckboat as dw\n",
+    "import duckboat as uck\n",
     "\n",
     "def foo(rel, res=6):\n",
     "    return rel.do(\n",
@@ -64,8 +64,8 @@
     }
    ],
    "source": [
-    "# dw.Table('https://d37ci6vzurychx.cloudfront.net/trip-data/yellow_tripdata_2010-01.parquet')\n",
-    "dw.Table('data/yellow_tripdata_2010-01.parquet')"
+    "# uck.Table('https://d37ci6vzurychx.cloudfront.net/trip-data/yellow_tripdata_2010-01.parquet')\n",
+    "uck.Table('data/yellow_tripdata_2010-01.parquet')"
    ]
   },
   {
@@ -114,8 +114,8 @@
     }
    ],
    "source": [
-    "# (dw.Table('https://d37ci6vzurychx.cloudfront.net/trip-data/yellow_tripdata_2010-01.parquet')\n",
-    "dw.Table('data/yellow_tripdata_2010-01.parquet').do(\n",
+    "# (uck.Table('https://d37ci6vzurychx.cloudfront.net/trip-data/yellow_tripdata_2010-01.parquet')\n",
+    "uck.Table('data/yellow_tripdata_2010-01.parquet').do(\n",
     "    'select *, pickup_latitude as lat, pickup_longitude as lng',\n",
     "    'select *, h3_latlng_to_cell(lat, lng, 8) as hexid',\n",
     "    'select hexid, avg(tip_amount) as tip  group by 1',\n",
@@ -171,7 +171,7 @@
     }
    ],
    "source": [
-    "dw.Table('data/yellow_tripdata_2010-01.parquet').do(\n",
+    "uck.Table('data/yellow_tripdata_2010-01.parquet').do(\n",
     "    'select *, pickup_latitude as lat, pickup_longitude as lng',\n",
     "    'select *, h3_latlng_to_cell(lat, lng, 8) as hexid',\n",
     "    'select hexid, avg(tip_amount) as tip  group by 1',\n",
@@ -227,7 +227,7 @@
     }
    ],
    "source": [
-    "dw.Table('data/yellow_tripdata_2010-01.parquet').do(\n",
+    "uck.Table('data/yellow_tripdata_2010-01.parquet').do(\n",
     "    'select *, pickup_latitude as lat, pickup_longitude as lng',\n",
     ").do(\n",
     "    'select *, h3_latlng_to_cell(lat, lng, 8) as hexid',\n",
@@ -248,8 +248,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rel1 = dw.Table('data/yellow_tripdata_2010-01.parquet')  # lazy load!\n",
-    "rel2 = dw.Table('data/yellow_tripdata_2010-02.parquet')  # lazy load!"
+    "rel1 = uck.Table('data/yellow_tripdata_2010-01.parquet')  # lazy load!\n",
+    "rel2 = uck.Table('data/yellow_tripdata_2010-02.parquet')  # lazy load!"
    ]
   },
   {
@@ -391,7 +391,7 @@
    "outputs": [],
    "source": [
     "# TODO: why isn't this lazy?\n",
-    "# rel3 = 'https://d37ci6vzurychx.cloudfront.net/trip-data/yellow_tripdata_2010-01.parquet' >> dw.load"
+    "# rel3 = 'https://d37ci6vzurychx.cloudfront.net/trip-data/yellow_tripdata_2010-01.parquet' >> uck.load"
    ]
   },
   {
@@ -440,7 +440,7 @@
     }
    ],
    "source": [
-    "rel4 = dw.Table('data/yellow_tripdata_2010-01.parquet')\n",
+    "rel4 = uck.Table('data/yellow_tripdata_2010-01.parquet')\n",
     "rel4"
    ]
   },
@@ -561,7 +561,7 @@
     }
    ],
    "source": [
-    "out = dw.Database(\n",
+    "out = uck.Database(\n",
     "    rel1 = foo(rel1),\n",
     "    rel2 = rel2.do(foo),\n",
     ")\n",
@@ -586,7 +586,7 @@
     }
    ],
    "source": [
-    "out = dw.Database(\n",
+    "out = uck.Database(\n",
     "    rel1 = foo(rel1),\n",
     "    rel2 = foo(rel2),\n",
     ").do(\"\"\"\n",
@@ -614,7 +614,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rel1 = dw.Table('data/yellow_tripdata_2010-01.parquet')"
+    "rel1 = uck.Table('data/yellow_tripdata_2010-01.parquet')"
    ]
   },
   {
@@ -672,7 +672,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "out = dw.Database(\n",
+    "out = uck.Database(\n",
     "    rel1 = 'data/yellow_tripdata_2010-01.parquet',\n",
     "    # rel1 = 'https://d37ci6vzurychx.cloudfront.net/trip-data/yellow_tripdata_2010-01.parquet',\n",
     "    rel2 = 'data/yellow_tripdata_2010-02.parquet',\n",
