--- a/notebooks/test_repr.ipynb
+++ b/notebooks/test_repr.ipynb
@@ -14,7 +14,7 @@
    },
    "outputs": [],
    "source": [
-    "import duckboat as dw"
+    "import duckboat as uck"
    ]
   },
   {
@@ -61,7 +61,7 @@
     }
    ],
    "source": [
-    "t = dw.Table('s3://us-west-2.opendata.source.coop/fused/fsq-os-places/2024-12-03/places/*.parquet', _hide=False)\n",
+    "t = uck.Table('s3://us-west-2.opendata.source.coop/fused/fsq-os-places/2024-12-03/places/*.parquet', _hide=False)\n",
     "t.do('select count(*)')"
    ]
   },
@@ -97,7 +97,7 @@
     }
    ],
    "source": [
-    "t = dw.Table('s3://us-west-2.opendata.source.coop/fused/fsq-os-places/2024-12-03/places/*.parquet')\n",
+    "t = uck.Table('s3://us-west-2.opendata.source.coop/fused/fsq-os-places/2024-12-03/places/*.parquet')\n",
     "t = t.do('alias tbl1', 'show')\n",
     "t"
    ]
@@ -244,7 +244,7 @@
     }
    ],
    "source": [
-    "t = dw.Table('s3://us-west-2.opendata.source.coop/fused/fsq-os-places/2024-12-03/places/*.parquet').hide()\n",
+    "t = uck.Table('s3://us-west-2.opendata.source.coop/fused/fsq-os-places/2024-12-03/places/*.parquet').hide()\n",
     "t"
    ]
   },
@@ -330,7 +330,7 @@
     }
    ],
    "source": [
-    "db = dw.Database(bah=t, _hide=False).hide()\n",
+    "db = uck.Database(bah=t, _hide=False).hide()\n",
     "db"
    ]
   },
@@ -396,7 +396,7 @@
     }
    ],
    "source": [
-    "dw.Database(**db)"
+    "uck.Database(**db)"
    ]
   },
   {
@@ -420,7 +420,7 @@
    },
    "outputs": [],
    "source": [
-    "out = dw.Table(dw.Table(t).do('select count(*)'), defer_repr=True)"
+    "out = uck.Table(uck.Table(t).do('select count(*)'), defer_repr=True)"
    ]
   },
   {
@@ -481,7 +481,7 @@
     }
    ],
    "source": [
-    "dw.Table(out)"
+    "uck.Table(out)"
    ]
   },
   {
@@ -631,7 +631,7 @@
     }
    ],
    "source": [
-    "import duckboat as dw"
+    "import duckboat as uck"
    ]
   },
   {
@@ -648,7 +648,7 @@
     }
    ],
    "source": [
-    "t = dw.Table('s3://us-west-2.opendata.source.coop/fused/fsq-os-places/2024-12-03/places/10.parquet')"
+    "t = uck.Table('s3://us-west-2.opendata.source.coop/fused/fsq-os-places/2024-12-03/places/10.parquet')"
    ]
   },
   {
