--- a/notebooks/trips_analysis.ipynb
+++ b/notebooks/trips_analysis.ipynb
@@ -25,7 +25,7 @@
    },
    "outputs": [],
    "source": [
-    "import duckboat as dw"
+    "import duckboat as uck"
    ]
   },
   {
@@ -53,7 +53,7 @@
     }
    ],
    "source": [
-    "t1 = dw.Table('data/yellow_tripdata_2010-01.parquet', defer_repr=True)\n",
+    "t1 = uck.Table('data/yellow_tripdata_2010-01.parquet', defer_repr=True)\n",
     "t1"
    ]
   },
@@ -118,7 +118,7 @@
     }
    ],
    "source": [
-    "dw.Table(t1)"
+    "uck.Table(t1)"
    ]
   },
   {
@@ -145,7 +145,7 @@
     }
    ],
    "source": [
-    "t2 = dw.Table('data/yellow_tripdata_2010-02.parquet')\n",
+    "t2 = uck.Table('data/yellow_tripdata_2010-02.parquet')\n",
     "t1.do(\n",
     "    avg_func,\n",
     "    'select int(log10(num))'\n",
@@ -692,8 +692,8 @@
     }
    ],
    "source": [
-    "t1 = dw.Table('data/yellow_tripdata_2010-01.parquet')\n",
-    "t2 = dw.Table('data/yellow_tripdata_2010-02.parquet')\n",
+    "t1 = uck.Table('data/yellow_tripdata_2010-01.parquet')\n",
+    "t2 = uck.Table('data/yellow_tripdata_2010-02.parquet')\n",
     "\n",
     "f = [\n",
     "    'where total_amount > 0',\n",
@@ -720,7 +720,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "db = dw.Database(t1=t1, t2=t2)"
+    "db = uck.Database(t1=t1, t2=t2)"
    ]
   },
   {
@@ -1029,7 +1029,7 @@
     }
    ],
    "source": [
-    "import duckboat as dw\n",
+    "import duckboat as uck\n",
     "\n",
     "core = [\n",
     "    'select *, h3_latlng_to_cell(pickup_latitude, pickup_longitude, 8) as hexid',\n",
@@ -1044,9 +1044,9 @@
     "    'where num > 100',\n",
     "]\n",
     "\n",
-    "db = dw.Database(\n",
-    "    t1 = dw.Table('data/yellow_tripdata_2010-01.parquet').do(core_with_filters),\n",
-    "    t2 = dw.Table('data/yellow_tripdata_2010-02.parquet').do(core_with_filters),\n",
+    "db = uck.Database(\n",
+    "    t1 = uck.Table('data/yellow_tripdata_2010-01.parquet').do(core_with_filters),\n",
+    "    t2 = uck.Table('data/yellow_tripdata_2010-02.parquet').do(core_with_filters),\n",
     ")\n",
     "\n",
     "db.do(\"\"\"\n",
@@ -1069,7 +1069,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "t1 = dw.Table('data/yellow_tripdata_2010-01.parquet').do(core_with_filters)"
+    "t1 = uck.Table('data/yellow_tripdata_2010-01.parquet').do(core_with_filters)"
    ]
   },
   {
