--- a/notebooks/trips_analysis.ipynb
+++ b/notebooks/trips_analysis.ipynb
@@ -711,7 +711,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To perform a join, you need two tables in on place. In Darkwing, such a place is a Database."
+    "To perform a join, you need two tables in on place. In Duckboat, such a place is a Database."
    ]
   },
   {
