--- a/notebooks/test_repr.ipynb
+++ b/notebooks/test_repr.ipynb
@@ -2,20 +2,551 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-12-23T14:55:38.390801Z",
-     "iopub.status.busy": "2024-12-23T14:55:38.390573Z",
-     "iopub.status.idle": "2024-12-23T14:55:38.460861Z",
-     "shell.execute_reply": "2024-12-23T14:55:38.460623Z",
-     "shell.execute_reply.started": "2024-12-23T14:55:38.390778Z"
+     "iopub.execute_input": "2024-12-28T22:50:53.469497Z",
+     "iopub.status.busy": "2024-12-28T22:50:53.469212Z",
+     "iopub.status.idle": "2024-12-28T22:50:53.763571Z",
+     "shell.execute_reply": "2024-12-28T22:50:53.763299Z",
+     "shell.execute_reply.started": "2024-12-28T22:50:53.469471Z"
     }
    },
    "outputs": [],
    "source": [
-    "import duckboat as uck"
+    "import duckboat as uck\n",
+    "import pandas as pd"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-12-28T22:50:54.957165Z",
+     "iopub.status.busy": "2024-12-28T22:50:54.956533Z",
+     "iopub.status.idle": "2024-12-28T22:50:54.963443Z",
+     "shell.execute_reply": "2024-12-28T22:50:54.962244Z",
+     "shell.execute_reply.started": "2024-12-28T22:50:54.957120Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame({'a': [0]})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-12-28T22:50:55.204667Z",
+     "iopub.status.busy": "2024-12-28T22:50:55.204175Z",
+     "iopub.status.idle": "2024-12-28T22:50:55.211495Z",
+     "shell.execute_reply": "2024-12-28T22:50:55.210501Z",
+     "shell.execute_reply.started": "2024-12-28T22:50:55.204634Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "f = 'select a + 1 as a'\n",
+    "t = uck.Table(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-12-28T22:58:58.028518Z",
+     "iopub.status.busy": "2024-12-28T22:58:58.027963Z",
+     "iopub.status.idle": "2024-12-28T22:58:58.046205Z",
+     "shell.execute_reply": "2024-12-28T22:58:58.045675Z",
+     "shell.execute_reply.started": "2024-12-28T22:58:58.028479Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>a</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   a\n",
+       "0  0"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t.hold('pandas')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-12-28T22:59:03.861317Z",
+     "iopub.status.busy": "2024-12-28T22:59:03.860500Z",
+     "iopub.status.idle": "2024-12-28T22:59:03.870293Z",
+     "shell.execute_reply": "2024-12-28T22:59:03.869588Z",
+     "shell.execute_reply.started": "2024-12-28T22:59:03.861279Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>a</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   a\n",
+       "0  0"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t.df()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-12-28T22:59:29.953134Z",
+     "iopub.status.busy": "2024-12-28T22:59:29.952642Z",
+     "iopub.status.idle": "2024-12-28T22:59:29.962447Z",
+     "shell.execute_reply": "2024-12-28T22:59:29.961696Z",
+     "shell.execute_reply.started": "2024-12-28T22:59:29.953100Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>a</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   a\n",
+       "0  0"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t.do('pandas')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-12-28T22:50:55.478455Z",
+     "iopub.status.busy": "2024-12-28T22:50:55.477609Z",
+     "iopub.status.idle": "2024-12-28T22:50:55.490718Z",
+     "shell.execute_reply": "2024-12-28T22:50:55.490222Z",
+     "shell.execute_reply.started": "2024-12-28T22:50:55.478416Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "┌───────┐\n",
+       "│   a   │\n",
+       "│ int64 │\n",
+       "├───────┤\n",
+       "│     3 │\n",
+       "└───────┘"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t.do(f).do(f).do(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-12-28T22:51:10.291599Z",
+     "iopub.status.busy": "2024-12-28T22:51:10.290893Z",
+     "iopub.status.idle": "2024-12-28T22:51:10.303033Z",
+     "shell.execute_reply": "2024-12-28T22:51:10.302297Z",
+     "shell.execute_reply.started": "2024-12-28T22:51:10.291545Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "┌───────┐\n",
+       "│   a   │\n",
+       "│ int64 │\n",
+       "├───────┤\n",
+       "│     3 │\n",
+       "└───────┘"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t.do(f, f, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-12-28T22:51:36.542945Z",
+     "iopub.status.busy": "2024-12-28T22:51:36.541783Z",
+     "iopub.status.idle": "2024-12-28T22:51:36.556561Z",
+     "shell.execute_reply": "2024-12-28T22:51:36.555649Z",
+     "shell.execute_reply.started": "2024-12-28T22:51:36.542901Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "┌───────┐\n",
+       "│   a   │\n",
+       "│ int64 │\n",
+       "├───────┤\n",
+       "│     3 │\n",
+       "└───────┘"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fs = [f, f, f]\n",
+    "t.do(fs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-12-28T22:51:41.318982Z",
+     "iopub.status.busy": "2024-12-28T22:51:41.318027Z",
+     "iopub.status.idle": "2024-12-28T22:51:41.330401Z",
+     "shell.execute_reply": "2024-12-28T22:51:41.329598Z",
+     "shell.execute_reply.started": "2024-12-28T22:51:41.318941Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "┌───────┐\n",
+       "│   a   │\n",
+       "│ int64 │\n",
+       "├───────┤\n",
+       "│     3 │\n",
+       "└───────┘"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t.do(*fs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-12-28T22:52:23.707043Z",
+     "iopub.status.busy": "2024-12-28T22:52:23.706283Z",
+     "iopub.status.idle": "2024-12-28T22:52:23.725041Z",
+     "shell.execute_reply": "2024-12-28T22:52:23.724463Z",
+     "shell.execute_reply.started": "2024-12-28T22:52:23.706999Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "┌───────┐\n",
+       "│   a   │\n",
+       "│ int64 │\n",
+       "├───────┤\n",
+       "│     6 │\n",
+       "└───────┘"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t.do(f, [f], [f, [[f, f], f]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-12-28T22:53:38.149925Z",
+     "iopub.status.busy": "2024-12-28T22:53:38.148640Z",
+     "iopub.status.idle": "2024-12-28T22:53:38.165239Z",
+     "shell.execute_reply": "2024-12-28T22:53:38.164591Z",
+     "shell.execute_reply.started": "2024-12-28T22:53:38.149882Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "┌───────┐\n",
+       "│   a   │\n",
+       "│ int64 │\n",
+       "├───────┤\n",
+       "│     2 │\n",
+       "└───────┘"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def foo(x):\n",
+    "    return x.do('select a + 2 as a')\n",
+    "\n",
+    "foo(t)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-12-28T22:53:45.639243Z",
+     "iopub.status.busy": "2024-12-28T22:53:45.638563Z",
+     "iopub.status.idle": "2024-12-28T22:53:45.648916Z",
+     "shell.execute_reply": "2024-12-28T22:53:45.648246Z",
+     "shell.execute_reply.started": "2024-12-28T22:53:45.639197Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "┌───────┐\n",
+       "│   a   │\n",
+       "│ int64 │\n",
+       "├───────┤\n",
+       "│     2 │\n",
+       "└───────┘"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t.do(foo)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-12-28T22:53:54.731622Z",
+     "iopub.status.busy": "2024-12-28T22:53:54.731048Z",
+     "iopub.status.idle": "2024-12-28T22:53:54.746569Z",
+     "shell.execute_reply": "2024-12-28T22:53:54.745835Z",
+     "shell.execute_reply.started": "2024-12-28T22:53:54.731583Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "┌───────┐\n",
+       "│   a   │\n",
+       "│ int64 │\n",
+       "├───────┤\n",
+       "│     3 │\n",
+       "└───────┘"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t.do([foo, f])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-12-28T22:38:02.501567Z",
+     "iopub.status.busy": "2024-12-28T22:38:02.500667Z",
+     "iopub.status.idle": "2024-12-28T22:38:02.515546Z",
+     "shell.execute_reply": "2024-12-28T22:38:02.515061Z",
+     "shell.execute_reply.started": "2024-12-28T22:38:02.501511Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "┌───────┐\n",
+       "│   a   │\n",
+       "│ int64 │\n",
+       "├───────┤\n",
+       "│     6 │\n",
+       "└───────┘"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    ".do([f]*5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
