--- a/notebooks/test_repr.ipynb
+++ b/notebooks/test_repr.ipynb
@@ -20,6 +20,309 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-12-28T23:13:30.908060Z",
+     "iopub.status.busy": "2024-12-28T23:13:30.907555Z",
+     "iopub.status.idle": "2024-12-28T23:13:30.916931Z",
+     "shell.execute_reply": "2024-12-28T23:13:30.916157Z",
+     "shell.execute_reply.started": "2024-12-28T23:13:30.908021Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "┌───────┐\n",
+      "│   a   │\n",
+      "│ int64 │\n",
+      "├───────┤\n",
+      "│     0 │\n",
+      "└───────┘\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame({'a': [0]})\n",
+    "\n",
+    "t = uck.Table(df)\n",
+    "print(t)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-12-28T23:24:21.009735Z",
+     "iopub.status.busy": "2024-12-28T23:24:21.009071Z",
+     "iopub.status.idle": "2024-12-28T23:24:21.014511Z",
+     "shell.execute_reply": "2024-12-28T23:24:21.013576Z",
+     "shell.execute_reply.started": "2024-12-28T23:24:21.009696Z"
+    }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-12-28T23:27:04.845617Z",
+     "iopub.status.busy": "2024-12-28T23:27:04.844637Z",
+     "iopub.status.idle": "2024-12-28T23:27:04.855504Z",
+     "shell.execute_reply": "2024-12-28T23:27:04.854730Z",
+     "shell.execute_reply.started": "2024-12-28T23:27:04.845574Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "df = pd.DataFrame(np.zeros((17,4)))\n",
+    "t = uck.Table(df).hide()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-12-28T23:27:05.513907Z",
+     "iopub.status.busy": "2024-12-28T23:27:05.513363Z",
+     "iopub.status.idle": "2024-12-28T23:27:05.520104Z",
+     "shell.execute_reply": "2024-12-28T23:27:05.519190Z",
+     "shell.execute_reply.started": "2024-12-28T23:27:05.513866Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'<Table(..., _hide=True)>'"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t.rowcols()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-12-28T23:20:42.562578Z",
+     "iopub.status.busy": "2024-12-28T23:20:42.562063Z",
+     "iopub.status.idle": "2024-12-28T23:20:42.569773Z",
+     "shell.execute_reply": "2024-12-28T23:20:42.568872Z",
+     "shell.execute_reply.started": "2024-12-28T23:20:42.562537Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import duckboat as uck\n",
+    "import pandas as pd\n",
+    "\n",
+    "\n",
+    "def test_repr():\n",
+    "    from textwrap import dedent\n",
+    "\n",
+    "    df = pd.DataFrame({'a': [0]})\n",
+    "    out = \"\"\"\n",
+    "    ┌───────┐\n",
+    "    │   a   │\n",
+    "    │ int64 │\n",
+    "    ├───────┤\n",
+    "    │     0 │\n",
+    "    └───────┘\n",
+    "    \"\"\"\n",
+    "    out = dedent(out)\n",
+    "    out = out.strip()\n",
+    "    out += '\\n'\n",
+    "\n",
+    "\n",
+    "    t = uck.Table(df)\n",
+    "    print(t)\n",
+    "    print(out)\n",
+    "\n",
+    "    # t = uck.Table(df, _hide=False)\n",
+    "    # assert repr(t) == out\n",
+    "\n",
+    "    # t = uck.Table(df, _hide=True)\n",
+    "    # assert repr(t) == '<Table(..., _hide=True)>'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-12-28T23:20:42.831520Z",
+     "iopub.status.busy": "2024-12-28T23:20:42.831014Z",
+     "iopub.status.idle": "2024-12-28T23:20:42.838987Z",
+     "shell.execute_reply": "2024-12-28T23:20:42.838336Z",
+     "shell.execute_reply.started": "2024-12-28T23:20:42.831488Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "┌───────┐\n",
+      "│   a   │\n",
+      "│ int64 │\n",
+      "├───────┤\n",
+      "│     0 │\n",
+      "└───────┘\n",
+      "\n",
+      "┌───────┐\n",
+      "│   a   │\n",
+      "│ int64 │\n",
+      "├───────┤\n",
+      "│     0 │\n",
+      "└───────┘\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_repr()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-12-28T23:17:56.633170Z",
+     "iopub.status.busy": "2024-12-28T23:17:56.632365Z",
+     "iopub.status.idle": "2024-12-28T23:17:56.645381Z",
+     "shell.execute_reply": "2024-12-28T23:17:56.644733Z",
+     "shell.execute_reply.started": "2024-12-28T23:17:56.633132Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "┌───────┐\n",
+      "│   a   │\n",
+      "│ int64 │\n",
+      "├───────┤\n",
+      "│     0 │\n",
+      "└───────┘\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from textwrap import dedent\n",
+    "\n",
+    "t = uck.Table(df, _hide=False)\n",
+    "\n",
+    "print(repr(t))\n",
+    "\n",
+    "out = \"\"\"\n",
+    "┌───────┐\n",
+    "│   a   │\n",
+    "│ int64 │\n",
+    "├───────┤\n",
+    "│     0 │\n",
+    "└───────┘\n",
+    "\"\"\"\n",
+    "out = out.strip()\n",
+    "out = dedent(out)\n",
+    "out += '\\n'\n",
+    "repr(t) == out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-12-28T23:17:29.211603Z",
+     "iopub.status.busy": "2024-12-28T23:17:29.211058Z",
+     "iopub.status.idle": "2024-12-28T23:17:29.218285Z",
+     "shell.execute_reply": "2024-12-28T23:17:29.217349Z",
+     "shell.execute_reply.started": "2024-12-28T23:17:29.211565Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'┌───────┐\\n│   a   │\\n│ int64 │\\n├───────┤\\n│     0 │\\n└───────┘'"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-12-28T23:17:11.598035Z",
+     "iopub.status.busy": "2024-12-28T23:17:11.597681Z",
+     "iopub.status.idle": "2024-12-28T23:17:11.602592Z",
+     "shell.execute_reply": "2024-12-28T23:17:11.601787Z",
+     "shell.execute_reply.started": "2024-12-28T23:17:11.597991Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "┌───────┐\n",
+      "│   a   │\n",
+      "│ int64 │\n",
+      "├───────┤\n",
+      "│     0 │\n",
+      "└───────┘\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(out)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {
     "execution": {
